# disasterpulse

./: Makefile  README.md  compose-dev.yaml  compose-prod.yaml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: disasters.py  reports.py
backend/app/core/: config.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: disaster.py  report.py
backend/app/schemas/: disaster.py  report.py
backend/app/utils/: ai_analysis.py  pdf_extractor.py
datasync/: README.md  api_client.py  config.py  disaster_pulse_sync.py  main.py  pyproject.toml  requirements.txt
datasync/db/: session.py
datasync/models/: base.py  disaster.py  report.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: Provider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(routes)/disaster/[id]/: page.tsx
frontend/src/app/(routes)/disaster/_components/: DisasterHeader.tsx  DisasterMap.tsx  DisasterOverview.tsx  DisasterTimeline.tsx  ImpactAnalysis.tsx  MapAnalysis.tsx  NeedsAnalysis.tsx  NewsComponent.tsx  SourceInfo.tsx
frontend/src/app/(routes)/updates/: page.tsx
frontend/src/app/(routes)/updates/_components/: FilterSection.tsx  GoogleMapSection.tsx  MarkerDisasterItem.tsx  MarkerItem.tsx
frontend/src/app/_components/: Disaster.tsx  DisasterMapView.tsx  FilterSection.tsx  Header.tsx
frontend/src/lib/: actions.ts  types.ts
