[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Carl Kugblenu <ckugblenu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
anthropic = "^0.30.1"
instructor = "^1.3.4"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
pymupdf = "^1.24.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
