[tool.poetry]
name = "datasync"
version = "0.1.0"
description = ""
authors = ["Carl Kugblenu <ckugblenu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
